feat: ТЗ 15. Добавить запрос на вещь. Тесты c покрытием согласно pom